exports[`PositionRange > constants > Should initialize correctly 1`] = `
{
  "start": {
    "line": 0,
    "character": 0
  },
  "end": {
    "line": 0,
    "character": 1
  }
}
`;

exports[`PositionRange > constants > Should initialize correctly 2`] = `
{
  "start": {
    "line": 0,
    "character": 0
  },
  "end": {
    "line": null,
    "character": null
  }
}
`;

exports[`PositionRange > create() > Should create correctly 1`] = `
{
  "start": {
    "line": 1,
    "character": 2
  },
  "end": {
    "line": 3,
    "character": 4
  }
}
`;

exports[`PositionRange > create() > Should create correctly 2`] = `
{
  "start": {
    "line": 1,
    "character": 2
  },
  "end": {
    "line": 3,
    "character": 4
  }
}
`;

exports[`PositionRange > create() > Should create correctly 3`] = `
{
  "start": {
    "line": 0,
    "character": 0
  },
  "end": {
    "line": 0,
    "character": 0
  }
}
`;

exports[`PositionRange > create() > Should create correctly 4`] = `
{
  "start": {
    "line": 1,
    "character": 2
  },
  "end": {
    "line": 0,
    "character": 0
  }
}
`;

exports[`PositionRange > create() > Should create correctly 5`] = `
{
  "start": {
    "line": 0,
    "character": 0
  },
  "end": {
    "line": 3,
    "character": 4
  }
}
`;

exports[`PositionRange > create() > Should create correctly 6`] = `
{
  "start": {
    "line": 1,
    "character": 2
  },
  "end": {
    "line": 3,
    "character": 4
  }
}
`;
